[package]
name = "wrk-api-bench"
version = "0.0.1"
edition = "2021"
description = "Library to perform HTTP benchmarks using wrk and produce useful performance regression information"
homepage    = "https://bheisler.github.io/criterion.rs/book/index.html"
repository  = "https://github.com/bheisler/criterion.rs"
readme      = "README.md"
keywords    = ["wrk", "benchmark", "profiling"]
categories  = ["development-tools::profiling"]
license     = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0"
csv = "1"
derive_builder = "0.10"
getset = "0.1"
log = "0.4"
prettytable-rs = "0.8"
pretty_assertions = "1"
rslua = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
tokio-serde-json = "0.3"
url = "2"
